--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/query-string": "^6.1.1",
     "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.1",
-    "idb": "^4.0.0",
+    "idb": "^4.0.5",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -43,7 +43,7 @@
     "semi": true,
     "singleQuote": true,
     "printWidth": 120,
-    "trailingComma": "es5"
+    "trailingComma": "none"
   },
   "browserslist": [
     ">0.2%",
